--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/codewithankit047/Nodejs#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "express": "^4.18.2",
     "nodemon": "^3.0.3"
   }
 }
